--- a/style.css
+++ b/style.css
@@ -86,6 +86,12 @@ a.active,a:hover{
     transform: scale(1.1);
 }
 
+p{
+    text-align: center;
+    color: black;
+    font-size: 100px;
+}
+
 footer{
     display: flex;
     flex-wrap: wrap;
